# opticalFlow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
opticalFlow-core/: CMakeLists.txt
opticalFlow-core-naive/: CMakeLists.txt
opticalFlow-core/source/: CMakeLists.txt
opticalFlow-core/source/datastructures/: DeviceData.cpp  DeviceData.h
opticalFlow-core/source/datastructurs/: DeviceArray.cpp  DeviceArray.h  DeviceData.h  DeviceMatrix.cpp  DeviceMatrix.h
opticalFlow-core/source/kernel/: IDataStructuresFactory.h  IDeviceMemAccess.h  IKernels.h
opticalFlow-core/source/kernel/host/: Device.cpp  Device.h  DeviceFactory.cpp  DeviceFactory.h
opticalFlow-core/source/kernel/kernels/: kernels.h  multArray.h  tempMacros.h
opticalFlow-core/source/kernelbackend/: IDataStructuresFactory.h  IDeviceMemAccess.h  IKernels.h
opticalFlow-core/source/kernels/: TestKernel.h
opticalFlow-core/source/opticalFlow/: opticalFlow.cpp  opticalFlow.h  sampleTest.cpp
opticalFlow-core/source/test/: Header.h  main.cpp  main.h
opticalFlow-core/source/test/test2/: Class2.cpp  Class2.hpp
opticalFlow-core/source/utilities/: device_ptr.h
opticalFlow-examples/Cuda/DataStructures/: CMakeLists.txt  main.cu
opticalFlow-examples/ImagePyramid/: CMakeLists.txt
opticalFlow-examples/utilities/: CMakeLists.txt
opticalFlow-examples/utilities/optFlowExampleUtilities/: CMakeLists.txt  FlowField.cpp  FlowField.h  Image.cpp  Image.h
opticalFlow-unittests/: CMakeLists.txt
opticalFlow-unittests/source/: CMakeLists.txt
opticalFlow-unittests/source/kernels/: TestmultKernel.cpp
opticalFlow-unittests/source/opticalFlow/: sampleTest.cpp  sampleTest2.cpp
opticalFlow-unittests/source/utilities/: Timer.h
src/: CMakeLists.txt
src/Horn-Schunck/: solve_layer.py
src/OptFlowCpp/: CMakeLists.txt  OptFlowCpp.sln
src/OptFlowCpp/cmake/: macros.cmake
src/OptFlowCpp/console_ui/: CMakeLists.txt  ComputeOpticalFlow.cpp  ComputeOpticalFlow.h  computed_flow.flo  console_ui.vcxproj  console_ui.vcxproj.filters  main.cpp  packages.config  temp_json_input.json  temp_json_input_acc.json  temp_json_input_fast.json
src/OptFlowCpp/console_ui/commandline/: IClEngine.h
src/OptFlowCpp/core/: Base.h  CMakeLists.txt  IArray.h  IArrayFactory.h  IContainer.h  IPenalty.h  IReshaper.h  IScaler.h  IStatistics.h  Logger.cpp  Logger.h  core.vcxproj  core.vcxproj.filters  pch.h
src/OptFlowCpp/cpu_backend/: Array.h  ArrayFactory.h  ArrayScaler.h  CMakeLists.txt  Container.h  CpuArray.h  CpuContainer.h  GrayPenaltyCrossProblemScaler.h  Reshaper.h  Scaler.h  Statistics.h  cpu_backend.vcxproj  cpu_backend.vcxproj.filters  packages.config  pch.h
src/OptFlowCpp/cpu_backend_utest/: ArithmeticBasic_test.cpp  array_test.cpp  container_test.cpp  cpu_backend_utest.vcxproj
src/OptFlowCpp/flow_helper/: flow_helper.vcxproj  flow_helper.vcxproj.filters
src/OptFlowCpp/json_settings/: CMakeLists.txt  JSONHandler.cpp  JSONHandler.h  JSONHelper.cpp  JSONHelper.h  json_settings.vcxproj  json_settings.vcxproj.filters
src/OptFlowCpp/libs/: CMakeLists.txt
src/OptFlowCpp/optflow_composition/: Backends.h  CMakeLists.txt  CPUBackendInstaller.cpp  CPUBackendInstaller.h  CPUBackendOptions.cpp  CPUBackendOptions.h  ContainerInstaller.cpp  ContainerInstaller.h  ContainerOptions.h  FlowSolverInstaller.cpp  FlowSolverInstaller.h  FlowSolverOptions.h  optflow_composition.vcxproj  optflow_composition.vcxproj.filters
src/OptFlowCpp/optflow_solvers/: Base.h  CMakeLists.txt  OpticalFlowApplication.cpp  OpticalFlowApplication.h  framework.h  optflow_solvers.vcxproj  optflow_solvers.vcxproj.filters  opticalflowsolvers.vcxproj.filters  packages.config  pch.h
src/OptFlowCpp/opticalflow/: Base.h  CMakeLists.txt  opticalflow.cpp  opticalflow.h  opticalflow.vcxproj  opticalflow.vcxproj.filters  pch.h
src/OptFlowCpp/opticalflowsolvers/: opticalflowsolvers.vcxproj  opticalflowsolvers.vcxproj.filters
src/OptFlowCpp/scripts/: cmake_udpate.bat  vcpkg_commands.txt
src/OptFlowCpp/unit_tests/: CMakeLists.txt
src/OptFlowCpp/utilities/: CMakeLists.txt
src/Programm/: CMakeLists.txt  printHalloWorld.cpp
src/core/: CMakeLists.txt
src/core/include/: Color.h  FlowField.h  FlowVector.h  ImageRGB.h  OpticalFlowMath.h  Timer.h
src/core/src/: Color.cpp  FlowField.cpp  FlowVector.cpp  ImageRGB.cpp  OpticalFlowMath.cpp
src/core/tests/: FlowFieldTest.cpp  ImageRGBTest.cpp
src/filter/: bilater_median.py  gaussian_blur.py
src/filter/cython/: bilateral_median.c  bilateral_median.pyx  setup.py
src/filter/test/: bilater_median_test.py
src/horn_schunck/: diagonal_image_components.py  horn_schunck.py  setup_linear_system.py  solve_layer.py  solver_settings.py
src/horn_schunck/tests/: compute_occlusion_test.py  diagonal_image_components_comparison.py  horn_schunck_test.py  solve_layer_test.py  test_setup_linear_system.py
src/intern/: CMakeLists.txt
src/intern/cpu/: CMakeLists.txt
src/intern/visualization/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/cub/: CMakeLists.txt
src/preprocessing/: rof.py
src/preprocessing/test/: rof_test.py
src/printerLib/: CMakeLists.txt
src/printerLib/include/: printerLib.hpp
src/printerLib/src/: printMsg.cpp  printVec.cpp  vecConverter.cpp  vecConverter.hpp  waiter.cpp
src/printerLib/tests/: vecConverterTests.cpp
src/sun_baker/: derivative_sun.py  solve_layer.py  solver_settings.py  sun_baker.py
src/sun_baker/setup_linear_system/: convolution3x3.py  setup_linear_system.py
src/sun_baker/test/: solve_layer_test.py  sun_baker_test.py
src/utilities/: CMakeLists.txt  absolute_endpoint_error.py  color2grayscale.py  compare_flow.py  compute_occlusion.py  flow_field_helper.py  image_access.py  image_derivative.py  image_pyramid.py  interpolate_grid.py  scale_flow_field.py  upscale_flow_field.py  warp_grid.py
src/utilities/logger/: CMakeLists.txt
src/utilities/loggerHelper/: CMakeLists.txt
src/utilities/tests/: flow_field_helper_tests.py  image_access_test.py  image_derivative_test.py  image_pyramid_test.py  interpolate_grid_test.py  scale_flow_test.py  scale_flow_up_test.py
(+615 files in other folders)
